[package]
name = "enterprise-architect-freetrial"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"
whoami = "1.5.1"
windows = { version = "0.57.0", features = [
    # "implement",
    # "Data_Xml_Dom",
    # "Win32_Foundation",
    # "Win32_Security",
    # "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.57.0"
winreg = "0.52.0"

[build-dependencies]

[profile.release]
lto = true
opt-level = "s"
